# serde_cose

./: .gitmodules  Cargo.toml  README.md
examples/: verify_sign1_ed25519.rs
src/: constants.rs  hash_map.rs  hash_map_encoder.rs  helpers.rs  key.rs  lib.rs  map.rs  sig.rs  sign1.rs
tests/: lib.rs  serde_cose_test.rs
tests/common/: mod.rs
